Changed the way messages appear, should no longer overlap

--- a/public/style.css
+++ b/public/style.css
@@ -55,7 +55,7 @@ body{
 }
 
 .clipping-background{
-    width: 110%;
+    width: 100%;
     height: 656px;
     position: absolute;
     margin-left: auto;
